--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # SITE CONFIGURATION
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://example.com" # the base hostname & protocol for your site
+url: "http://malt3d.com" # the base hostname & protocol for your site
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
   title: malt3d 
-  avatar: avatar.png
+  avatar: wheat.png
   gravatar: # Email MD5 hash
   description: "A high performance, 3d game engine" # used by search engines
 
